--- a/AminWeb/Areas/User/Views/Chat/Index.cshtml
+++ b/AminWeb/Areas/User/Views/Chat/Index.cshtml
@@ -24,70 +24,25 @@
     <div class="chat-room uk-margin-top uk-box-shadow-hover-large">
         <ul class="uk-padding-remove">
             <li>
-                <div class="message column">
-                    <div class="row">
-                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
-                        <span class="date">1399/08/08</span>
-                    </div>
-                    <p class="text">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
-                    </p>
-                </div>
+                @Html.Partial("Message")
             </li>
             <li>
-                <div class="message column">
-                    <div class="row">
-                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
-                        <span class="date">1399/08/08</span>
-                    </div>
-                    <p class="text">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
-                    </p>
-                </div>
+                @Html.Partial("Message")
             </li>
             <li>
-                <div class="message column">
-                    <div class="row">
-                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
-                        <span class="date">1399/08/08</span>
-                    </div>
-                    <p class="text">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
-                    </p>
-                </div>
+                @Html.Partial("Message")
             </li>
             <li>
-                <div class="message column">
-                    <div class="row">
-                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
-                        <span class="date">1399/08/08</span>
-                    </div>
-                    <p class="text">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
-                    </p>
-                </div>
+                @Html.Partial("Message")
             </li>
             <li>
-                <div class="message column">
-                    <div class="row">
-                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
-                        <span class="date">1399/08/08</span>
-                    </div>
-                    <p class="text">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
-                    </p>
-                </div>
+                @Html.Partial("Message")
             </li>
             <li>
-                <div class="message column">
-                    <div class="row">
-                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
-                        <span class="date">1399/08/08</span>
-                    </div>
-                    <p class="text">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
-                    </p>
-                </div>
+                @Html.Partial("Message")
+            </li>
+            <li>
+                @Html.Partial("Message")
             </li>
         </ul>
     </div>
@@ -96,7 +51,8 @@
         <div class="row uk-width-1-1">
             <textarea type="text" name="Message" class="uk-width-1-1" placeholder="..."></textarea>
             <button class="btn-pill-primary uk-margin-left uk-margin-auto-bottom">
-                <span uk-icon="icon:send;ratio:1.2"></span>
+                @*<span uk-icon="icon:send;ratio:1.2"></span>*@
+                فرستادن
             </button>
         </div>
     </div>
