--- a/AminWeb/Views/Shared/_Playlist.cshtml
+++ b/AminWeb/Views/Shared/_Playlist.cshtml
@@ -22,6 +22,14 @@
                     <dd>
                         <a href="#">حسن حسن زاده</a>
                     </dd>
+                    <dt>
+                        میانگین امتیاز ها
+                    </dt>
+                    <dd>
+                        <span uk-icon="star">
+                            4.5
+                        </span>
+                    </dd>
                 </dl>
             </div>
         </div>
