--- a/AminWeb/Views/Home/Index.cshtml
+++ b/AminWeb/Views/Home/Index.cshtml
@@ -63,6 +63,19 @@
                     <label for="CategorySearch" class="collapsed">جستجو دسته بندی</label>
                     <input dir="rtl" type="text" placeholder="جستجو..." name="CategorySearch" />
                 </div>
+
+                @*
+
+                    <details dir="rtl">
+                        <summary>دسته بندی</summary>
+                        <div class="column uk-margin-small-right">
+                            <a href="#">آیتم</a>
+                            <a href="#">آیتم</a>
+                        </div>
+                    </details>
+
+                *@
+
                 <details dir="rtl">
                     <summary>دسته بندی</summary>
                     <div class="uk-margin-right column">
