--- a/AminWeb/Areas/Admin/Views/Chat/Index.cshtml
+++ b/AminWeb/Areas/Admin/Views/Chat/Index.cshtml
@@ -2,20 +2,13 @@
 @{
     ViewBag.Title = "چت ها";
 }
-
 <div class="card flex-div border-0 shadow">
     <div class="card-header bg-white">
         <div class="row justify-content-end">
             <div class="col-md-10 col-12">
-                <form class="card-form row" action="/Admin/Ticket/Index" method="post">
+                <form class="card-form row" action="/Admin/Chat/Index" method="post">
                     <div class="form-input col-md-8">
                         <div class="form-inline">
-                            <div class="form-group mx-sm-1 mb-2">
-                                <input class="form-control form-control-sm" name="title" type="text" value="@ViewBag.title" placeholder="موضوع">
-                            </div>
-                            <div class="form-group mx-sm-1 mb-2">
-                                <input class="form-control form-control-sm" name="name" type="text" value="@ViewBag.name" placeholder="نام">
-                            </div>
                             <div class="form-group mx-sm-1 mb-2">
                                 <input class="form-control form-control-sm" name="tellNo" type="text" value="@ViewBag.tellNo" placeholder="شماره تماس">
                             </div>
