--- a/AminWeb/Areas/Admin/Views/Catagory/ListCat.cshtml
+++ b/AminWeb/Areas/Admin/Views/Catagory/ListCat.cshtml
@@ -2,7 +2,7 @@
 <div class="card-header bg-white">
     <div class="row justify-content-end">
         <div class="col-md-2 col-3 pl-2 pr-0">
-            <a onclick="create()" class="btn btn-success btn-sm text-white float-left"><i class="fas fa-plus-circle"></i>افزودن</a>
+            <a onclick="create(@ViewBag.ParentId)" class="btn btn-success btn-sm text-white float-left"><i class="fas fa-plus-circle"></i>افزودن</a>
         </div>
     </div>
 </div>
@@ -22,7 +22,7 @@
                 {
                     foreach (var item in Model)
                     {
-                        <tr id="user_@item.CatagoryId" class="list-item">
+                        <tr id="cat_@item.CatagoryId" class="list-item">
                             <td>@(Model.ToList().IndexOf(item)+1)</td>
                             <td>
                                 @item.Name
@@ -36,10 +36,10 @@
                             </td>
                             <td>
                                 <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
-                                    <a href="/Admin/User/Edit/@item.CatagoryId"><i class="btn fas fa-edit mr-2 text-primary"></i></a>
+                                    <a onclick="edit(@item.CatagoryId)" ><i class="btn fas fa-edit mr-2 text-primary"></i></a>
                                 </span>
                                 <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
-                                    <a onclick="deleteUser(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave"><i class="btn fas fa-trash mr-2 text-danger"></i></a>
+                                    <a onclick="deleteCat(@item.CatagoryId)" data-toggle="modal" data-target="#modalSave"><i class="btn fas fa-trash mr-2 text-danger"></i></a>
                                 </span>
                             </td>
                         </tr>
