--- a/AminWeb/Content/Styles/Areas/Admin.css
+++ b/AminWeb/Content/Styles/Areas/Admin.css
@@ -27,7 +27,7 @@ backdrop-filter: saturate(80%);
 #overlay {
   position: fixed;
   top: 0;
-  z-index: 5050;
+  z-index: 50500000;
   width: 100%;
   height: 100%;
   display: none;
