--- a/AminWeb/Content/Styles/Areas/_loading.scss
+++ b/AminWeb/Content/Styles/Areas/_loading.scss
@@ -3,7 +3,7 @@
 #overlay {
     position: fixed;
     top: 0;
-    z-index: 5050;
+    z-index: 50500000;
     width: 100%;
     height: 100%;
     display: none;
