--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -16,6 +16,11 @@
     <script src="~/Content/UIkit/uikit.min.js"></script>
     <script src="~/Content/UIkit/uikit-icons.min.js"></script>
 
+
+    <script src="~/Scripts/jquery-3.5.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 </head>
 <body>
 
@@ -23,55 +28,68 @@
 
     <div id="Modal-Account" uk-modal>
         <div class="uk-modal-dialog uk-modal-body">
-            @*@Html.Action("Login","Account")*@
+            @Html.Action("Login", "Account")
             @*@Html.Action("SignUp","Account")*@
         </div>
     </div>
-
-    @*<script>
-            //برای نشان دادن و مخفی کردن مودال
-            UIkit.modal(document.getElementById('Modal-Account')).show();
-            UIkit.modal(document.getElementById('Modal-Account')).hide();
-        </script>*@
+    <div id="Modal-Register" uk-modal>
+        <div class="uk-modal-dialog uk-modal-body">
+            @Html.Action("SignUp", "Account")
+        </div>
+    </div>
+    <script>
+        //برای نشان دادن و مخفی کردن مودال
+        // UIkit.modal(document.getElementById('Modal-Account')).show();
+        //UIkit.modal(document.getElementById('Modal-Account')).hide();
+    </script>
 
     <!-- #endregion -->
     <!-- #region Header -->
 
     <header role="navigation" class="top-nav row">
         <nav class="uk-flex-auto row flex-1">
-            <a href="/User/Account/UserData" class="uk-margin-auto-right lesser">
-                پروفایل
-            </a>
-
-            <div uk-drop id="navDrop">
-                <div class="drop-body uk-padding-small column">
-                    <ul class="uk-margin-remove uk-padding-remove">
-                        <li>
-                            <a href="/User/Account/UserData">
-                                <span>پروفایل</span>
-                                <span uk-icon="icon:user"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/User/Video/YourVideos">
-                                <span>آپلود</span>
-                                <span uk-icon="icon:cloud-upload"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span>خروج</span>
-                                <span uk-icon="icon:sign-out"></span>
-                            </a>
-                        </li>
-                    </ul>
-                    <hr class="uk-grid-margin-small" />
-                    <a href="/User/Account/Wallet" class="success">
-                        <span>130,000</span>
-                        <span uk-icon="icon:money"></span>
-                    </a>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a href="/User/Account/UserData" class="uk-margin-auto-right lesser">
+                    پروفایل
+                </a>
+                <div uk-drop id="navDrop">
+                    <div class="drop-body uk-padding-small column">
+                        <ul class="uk-margin-remove uk-padding-remove">
+                            <li>
+                                <a href="/User/Account/UserData">
+                                    <span>پروفایل</span>
+                                    <span uk-icon="icon:user"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/User/Video/YourVideos">
+                                    <span>آپلود</span>
+                                    <span uk-icon="icon:cloud-upload"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span>خروج</span>
+                                    <span uk-icon="icon:sign-out"></span>
+                                </a>
+                            </li>
+                        </ul>
+                        <hr class="uk-grid-margin-small" />
+                        <a href="/User/Account/Wallet" class="success">
+                            <span>130,000</span>
+                            <span uk-icon="icon:money"></span>
+                        </a>
+                    </div>
                 </div>
-            </div>
+
+            }
+            else
+            {
+                <a onclick="UIkit.modal(document.getElementById('Modal-Account')).show();" class="uk-margin-auto-right lesser">
+                    ورود
+                </a>
+            }
 
             <div role="list" class="row-reverse uk-margin-auto-left">
                 <a role="listitem" href="/Home/Index" class="lesser">
