update admin login

--- a/AminWeb/Content/Styles/Controls.scss
+++ b/AminWeb/Content/Styles/Controls.scss
@@ -1,6 +1,7 @@
 ﻿@import '_colors.scss';
 @import '_starRating.scss';
 @import '_layout.scss';
+@import '_loading.scss';
 
 .top-nav {
     padding: 15px 0 0 0;
