--- a/AminWeb/Areas/User/Views/Account/ChangePassword.cshtml
+++ b/AminWeb/Areas/User/Views/Account/ChangePassword.cshtml
@@ -1,34 +1,45 @@
-﻿
+﻿@model DataLayer.ViewModels.VmChangeOldNewPassword
 @{
     ViewBag.Title = "ChangePassword";
     Layout = "~/Areas/User/Views/Shared/_Layout.cshtml";
 }
-
-<div class="mat uk-padding uk-box-shadow-small column">
-    <h3>
-        تغییر رمز عبور
-    </h3>
-
-    <div class="form-group">
-        <label for="Password">رمز عبور جدید</label>
-        <div class="input-group">
-            <input type="password" name="Password" />
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <div class="mat uk-padding uk-box-shadow-small column">
+        <h3>
+            تغییر رمز عبور
+        </h3>
+        <div class="form-group">
+            <label for="Password">رمز عبور قدیم</label>
+            <div class="input-group">
+                @Html.EditorFor(m => m.OldPassword)
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.OldPassword, "", new { @class = "uk-text-danger" })
+            </span>
         </div>
-        <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
-    </div>
 
-    <div class="form-group">
-        <label for="RePassword">تکرار رمز عبور</label>
-        <div class="input-group">
-            <input type="password" name="RePassword" />
+        <div class="form-group">
+            <label for="RePassword">رمز عبور جدید</label>
+            <div class="input-group">
+                @Html.EditorFor(m => m.Password)
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "uk-text-danger" })
+            </span>
         </div>
-        <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
+        <div class="form-group">
+            <label for="RePassword">تکرار رمز عبور</label>
+            <div class="input-group">
+                @Html.EditorFor(m => m.RePassword)
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.RePassword, "", new { @class = "uk-text-danger" })
+            </span>
+        </div>
+        <div class="row-reverse uk-margin-top">
+            <input type="submit" value="تغیر رمز" class="btn-primary"/>
+        </div>
     </div>
-
-    <div class="row-reverse uk-margin-top">
-        <button class="btn-primary" type="button">
-            ویرایش
-        </button>
-    </div>
-
-</div>
+}
