--- a/AminWeb/Areas/User/Views/Account/Info.cshtml
+++ b/AminWeb/Areas/User/Views/Account/Info.cshtml
@@ -21,7 +21,7 @@
     </ul>
 
     <div class="row-reverse uk-margin-top">
-        <button class="btn-primary" type="button" uk-toggle="target: #Modal-Edit">
+        <button class="btn-primary" type="button" onclick="editInfo()">
             ویرایش
         </button>
     </div>
