--- a/AminWeb/Views/Account/Login.cshtml
+++ b/AminWeb/Views/Account/Login.cshtml
@@ -1,14 +1,7 @@
 ﻿@model DataLayer.ViewModels.VmLogin
 
-@*@using (Ajax.BeginForm("Login", "Account", new AjaxOptions()
-    {
-        HttpMethod = "POST",
-        OnSuccess = "LoadingEnd('#createCatagory')",
-        UpdateTargetId = "loginForm"
-    },
-        htmlAttributes: new { @id = "loginForm" }))*@
 
-@using (Ajax.BeginForm("Login", "Account", new AjaxOptions() { HttpMethod = "POST", OnFailure = "doneModal('Modal-Account')", OnSuccess = "LoadingEnd('#loginForm')", UpdateTargetId = "loginForm" }, htmlAttributes: new { @id = "loginForm" }))
+@using (Ajax.BeginForm("Login", "Account", new AjaxOptions() { HttpMethod = "POST", OnFailure = "doneModal('Modal-Show')", OnSuccess = "LoadingEnd('#loginForm')", UpdateTargetId = "loginForm" }, htmlAttributes: new { @id = "loginForm" }))
 {
     @Html.AntiForgeryToken()
     <div class="form column" role="form">
@@ -18,13 +11,19 @@
             </h3>
             <button class="uk-modal-close uk-margin-auto-right" type="button" uk-icon="close"></button>
         </div>
-        @if (User.Identity.IsAuthenticated && Request.QueryString["ReturnUrl"] != null)
+        @if (Request.QueryString["ReturnUrl"] == "Active")
+        {
+            <div class="uk-text-danger uk-margin-bottom">
+                <p class="uk-text-danger">حساب کاربری شما فعال شد می توانید وارد حساب خود شوید</p>
+            </div>
+        }
+        else if (User.Identity.IsAuthenticated && Request.QueryString["ReturnUrl"] != null)
         {
             <div class="uk-text-danger uk-margin-bottom">
                 <p class="uk-text-danger">شما مجوز ورود به بخش درخواست شده را ندارید .</p>
             </div>
         }
-        @if (!User.Identity.IsAuthenticated && Request.QueryString["ReturnUrl"] != null)
+        else if (!User.Identity.IsAuthenticated && Request.QueryString["ReturnUrl"] != null)
         {
             <div class="uk-text-danger uk-margin-bottom">
                 <p class="uk-text-danger">لطفا وارد حساب کاربری خود شوید </p>
@@ -50,7 +49,7 @@
             </span>
         </div>
         <div class="form-group">
-            <input type="hidden" name="GoogleCapcha" class="GoogleCapcha" value="" />
+            <input type="hidden" name="GoogleCapcha" class="GoogleCapcha" id="GoogleCapcha" value="" />
             <span role="alert" class="alert">
                 @Html.ValidationSummary(true, "", new { @class = "uk-text-danger" })
             </span>
@@ -61,16 +60,17 @@
                 مرا بخاطر بسپار
             </label>
         </div>
-        <a href="#" onclick="forgetPassword()" class="uk-margin-top">رمز عبور خود را فراموش کرده اید؟</a>
+        <a onclick="forgetPassword()" class="uk-margin-top">رمز عبور خود را فراموش کرده اید؟</a>
 
         <div class="column center uk-margin-large-top">
             <button class="btn-primary uk-margin-bottom" onclick="LoadingRun('#loginForm')">
                 ورود
             </button>
 
-            <a onclick="UIkit.modal(document.getElementById('Modal-Register')).show();" class="btn-secondary btn">
+            <a onclick="showRegister();" class="btn-secondary btn">
                 ثبت نام
             </a>
         </div>
     </div>
 }
+
