--- a/AminWeb/Areas/User/Views/Account/Edit.cshtml
+++ b/AminWeb/Areas/User/Views/Account/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DataLayer.ViewModels.VmEditInfo
 
-        @using (Ajax.BeginForm("Edit", "Account", new AjaxOptions() { HttpMethod = "POST", OnFailure = "doneModal('Modal-Edit')", OnSuccess = "LoadingEnd('#editForm')", UpdateTargetId = "editForm" }, htmlAttributes: new { @id = "editForm" }))
+        @using (Ajax.BeginForm("Edit", "Account", new AjaxOptions() { HttpMethod = "POST",  OnFailure = "doneModal('Modal-Show')", OnSuccess = "LoadingEnd('#editForm')", UpdateTargetId = "editForm" }, htmlAttributes: new { @id = "editForm" }))
         {
             @Html.AntiForgeryToken()
             @Html.HiddenFor(m => m.UserId)
@@ -19,10 +19,10 @@
             <div class="form-group">
                 <label for="Tel">شماره تلفن</label>
                 <div class="input-group">
-                    @Html.EditorFor(m => m.TellNo)
+                    @Html.EditorFor(m => m.TellNo, new { htmlAttributes = new {@type = "number", @min = "0", @step = "0.01", @value = "0" } })
                 </div>
                 <span role="alert" class="alert">
-                    @Html.ValidationMessageFor(model => model.TellNo, "", new { @class = "uk-text-danger" })
+                    @Html.ValidationMessageFor(model => model.TellNo, "", new { @class = "uk-text-danger"})
                 </span>
             </div>
             <div class="form-group">
